--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set -g default-terminal "xterm-256color"
 # set -g status-style 'bg=colour20,fg=colour8'
 # set -g window-status-current-style 'bg=colour20,fg=colour9'
 
-bind -n C-t new-window -a
+# bind -n C-t new-window -a
 bind -n S-left  prev
 bind -n S-right next
 bind -n S-C-left  swap-window -t -1
