--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@ set -g default-terminal "xterm-256color"
 # set -g window-status-current-style 'bg=colour20,fg=colour9'
 
 # bind -n C-t new-window -a
+unbind -n C-t
+unbind -n C-a
 bind -n S-left  prev
 bind -n S-right next
 bind -n S-C-left  swap-window -t -1
@@ -18,8 +20,8 @@ bind -n S-up \
     unbind -n S-right \; \
     unbind -n S-C-left \; \
     unbind -n S-C-right \; \
-    unbind -n C-t \; \
-    set -qg prefix C-a
+    # unbind -n C-t \; \
+    # set -qg prefix C-a
 bind -n S-down \
     send-keys M-F11 \; \
     set -qg status-style bg=colour20 \; \
@@ -27,7 +29,7 @@ bind -n S-down \
     bind -n S-right next \; \
     bind -n S-C-left swap-window -t -1 \; \
     bind -n S-C-right swap-window -t +1 \; \
-    bind -n C-t new-window -a -c "#{pane_current_path}" \; \
+    # bind -n C-t new-window -a -c "#{pane_current_path}" \; \
     set -qg prefix C-b
 
 
