--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-shell /usr/bin/zsh
+set-option -g default-shell /bin/zsh
 set -g default-terminal "tmux-256color"
 # set -g status-style 'bg=colour20,fg=colour8'
 # set -g window-status-current-style 'bg=colour20,fg=colour9'
